--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,3 +1,4 @@
+// Переменные цветов
 :root {
   --grey-1: #f9f9fa;
   --grey-2: #eceef0;
@@ -31,7 +32,11 @@
   --bg: #141618;
 }
 
+// Ключевые точки
 $x-large: 1440px;
 $large: 1024px;
 $medium: 768px;
 $small: 375px;
+
+// Подключение шрифта, font-family: "Open Sans", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
