--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -22,3 +22,12 @@
   width: 100%;
   margin: 0 auto;
 }
+
+.button {
+  height: 56px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
