--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -19,6 +19,7 @@
   --primary-7: #6aa0f7;
   --primary-8: #4287f5;
   --primary-9: #1b70f1;
+  --primary-9-alpha: #1b71f11f;
   --primary-10: #1151b6;
   --success: #06b470;
   --success-light: #f1fcd3;
