--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -1,5 +1,3 @@
-@import "../index";
-
 .footer {
   width: 100%;
   padding: 120px 0 40px 0;
@@ -8,6 +6,10 @@
 
   &__container {
     @extend .container;
+
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
   }
 
   &__logo {
@@ -27,6 +29,103 @@
       line-height: 32px;
 
       color: var(--grey-1);
+    }
+  }
+
+  &__line {
+    width: 100%;
+    height: 1px;
+
+    background: linear-gradient(
+      0.25turn,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.2) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+  }
+
+  &__links {
+    display: flex;
+    gap: 30px;
+
+    &-item {
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &-title {
+      margin-bottom: 10px;
+
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 28px;
+
+      color: var(--grey-1);
+    }
+
+    &-link {
+      color: var(--grey-6);
+      font-size: 16px;
+      line-height: 24px;
+
+      & > span {
+        padding: 4px 8px;
+
+        border-radius: 2px;
+
+        background: var(--primary-9-alpha);
+
+        color: var(--primary-9);
+        font-size: 14px;
+      }
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+
+    &-copyright {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      & > span {
+        font-size: 16px;
+
+        color: var(--grey-1);
+      }
+
+      & > i {
+        display: block;
+
+        width: 7px;
+        height: 7px;
+
+        background: #fff;
+
+        border-radius: 50%;
+
+        opacity: 0.4;
+      }
+    }
+
+    &-langs {
+      display: flex;
+      gap: 30px;
+    }
+
+    &-input {
+      padding: 6px 14px;
+
+      display: flex;
+      gap: 10px;
+
+      border: 1px solid #ffffff25;
+      border-radius: 4px;
     }
   }
 }
