--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "variables";
 @import "components/header.scss";
+@import "components/footer.scss";
 
 * {
   font-family: "Open Sans", sans-serif;
