--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -1,11 +1,32 @@
 .footer {
+  position: relative;
+
+  display: block;
+
   width: 100%;
   padding: 120px 0 40px 0;
 
   background: var(--dark-blue);
 
+  &::before {
+    content: "";
+
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-image: url("../../../assets/img/bg-noise.png");
+    background-position: center;
+    background-size: cover;
+  }
+
   &__container {
-    @extend .container;
+    max-width: 1590px;
+    width: 100%;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
@@ -17,6 +38,11 @@
 
     display: flex;
     justify-content: space-between;
+
+    & > img {
+      width: 192px;
+      height: 19px;
+    }
   }
 
   &__community {
@@ -122,10 +148,23 @@
       padding: 6px 14px;
 
       display: flex;
+      align-items: center;
       gap: 10px;
 
       border: 1px solid #ffffff25;
       border-radius: 4px;
+
+      & > span {
+        font-size: 16px;
+
+        color: var(--grey-1);
+      }
+
+      & > img {
+        width: 12px;
+        height: 12px;
+        object-fit: contain;
+      }
     }
   }
 }
