--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,243 +1,25 @@
-@charset "UTF-8";
-/***
-    The new CSS reset - version 1.8.4 (last updated 14.2.2023)
-    GitHub page: https://github.com/elad2412/the-new-css-reset
-***/
-/*
-    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
-    - The "symbol *" part is to solve Firefox SVG sprite bug
- */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
-*:where(:not(html,
-iframe,
-canvas,
-img,
-svg,
-video,
-audio,
-input[type=checkbox],
-#text-editor *,
-.model-details_description *,
-.shortpost_text *,
-.blog_description *):not(svg *, symbol *)) {
-  all: unset;
-  display: revert;
-}
-
-/* Preferred box-sizing value */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Reapply the pointer cursor for anchor tags */
-a,
-button {
-  cursor: revert;
-}
-
-/* Remove list styles (bullets/numbers) */
-ol,
-ul,
-menu {
-  list-style: none;
-}
-
-img {
-  max-inline-size: 100%;
-  max-block-size: 100%;
-}
-
-/* removes spacing between cells in tables */
-table {
-  border-collapse: collapse;
-}
-
-/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
-input,
-textarea {
-  -webkit-user-select: auto;
-  user-select: auto;
-}
-
-button {
-  cursor: pointer;
-}
-
-/* revert the 'white-space' property for textarea elements on Safari */
-textarea {
-  white-space: revert;
-}
-
-/* minimum style to allow to style meter element */
-meter {
-  -webkit-appearance: revert;
-  appearance: revert;
-}
-
-/* preformatted text - use only for this feature */
-:where(pre) {
-  all: revert;
-}
-
-/* reset default text opacity of input placeholder */
-::placeholder {
-  color: unset;
-}
-
-/* remove default dot (•) sign */
-::marker {
-  content: initial;
-}
-
-/* fix the feature of 'hidden' attribute.
-   display:revert; revert to element instead of attribute */
-:where([hidden]) {
-  display: none;
-}
-
-/* revert for bug in Chromium browsers
-   - fix for the content editable attribute will work properly.
-   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element*/
-:where([contenteditable]:not([contenteditable=false])) {
-  -moz-user-modify: read-write;
-  -webkit-user-modify: read-write;
-  overflow-wrap: break-word;
-  -webkit-line-break: after-white-space;
-  -webkit-user-select: auto;
-  user-select: auto;
-  line-break: after-white-space;
-}
-
-/* apply back the draggable feature - exist only in Chromium and Safari */
-:where([draggable=true]) {
-  -webkit-user-drag: element;
-}
-
-/* Revert Modal native behavior */
-:where(dialog:modal) {
-  all: revert;
-}
-
-html,
-body {
-  height: 100%;
-}
-
-input[type=password]::-ms-reveal,
-input[type=password]::-ms-clear {
-  display: none !important;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-:root {
-  --grey-1: #f9f9fa;
-  --grey-2: #eceef0;
-  --grey-3: #dee1e5;
-  --grey-4: #cfd3da;
-  --grey-5: #bfc4cd;
-  --grey-6: #adb3bf;
-  --grey-7: #98a0af;
-  --grey-8: #808a9a;
-  --grey-9: #7e8184;
-  --grey-10: #54576d;
-  --primary: #f7faff;
-  --primary-2: #f2f7ff;
-  --primary-3: #d1e2fd;
-  --primary-4: #bcd4fb;
-  --primary-5: #a5c5fa;
-  --primary-6: #8ab4f9;
-  --primary-7: #6aa0f7;
-  --primary-8: #4287f5;
-  --primary-9: #1b70f1;
-  --primary-9-alpha: #1b71f11f;
-  --primary-10: #1151b6;
-  --success: #06b470;
-  --success-light: #f1fcd3;
-  --error: #f74e2c;
-  --error-light: #ffe8d5;
-  --extra: #ffba3a;
-  --extra-light: #fff6d7;
-  --bg: #141618;
-  --dark-blue: #1e1f25;
-}
-
-.header {
-  background: var(--dark-blue);
-  height: 120px;
-  display: flex;
-  align-items: center;
-}
-.header__content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header__logo {
-  display: flex;
-  align-items: center;
-  padding-right: 40px;
-  height: fit-content;
-  border-right: 1px solid var(--grey-6);
-}
-.header__nav {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-.header__nav-item {
-  display: flex;
-  align-items: center;
-  padding: 8px 18px;
-  gap: 12px;
-  color: var(--grey-6);
-  cursor: pointer;
-}
-.header__nav-item span {
-  font-weight: 500;
-  color: currentColor;
-}
-* {
-  font-family: "Open Sans", sans-serif;
-  font-size: 18px;
-  color: white;
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 120px;
-  background: var(--bg);
-  height: 100%;
-  padding: 20px 20px;
-}
-
-.container, .footer__container, .header__content {
-  max-width: 1590px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.button, .header__logIn {
-  height: 56px;
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-}
-
 .footer {
+  position: relative;
+  display: block;
   width: 100%;
   padding: 120px 0 40px 0;
   background: var(--dark-blue);
 }
+.footer::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("../../../assets/img/bg-noise.png");
+  background-position: center;
+  background-size: cover;
+}
 .footer__container {
+  max-width: 1590px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 60px;
@@ -246,6 +28,10 @@ input::-webkit-inner-spin-button {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.footer__logo > img {
+  width: 192px;
+  height: 19px;
 }
 .footer__community {
   display: flex;
@@ -319,7 +105,17 @@ input::-webkit-inner-spin-button {
 .footer__bottom-input {
   padding: 6px 14px;
   display: flex;
+  align-items: center;
   gap: 10px;
   border: 1px solid rgba(255, 255, 255, 0.1450980392);
   border-radius: 4px;
+}
+.footer__bottom-input > span {
+  font-size: 16px;
+  color: var(--grey-1);
+}
+.footer__bottom-input > img {
+  width: 12px;
+  height: 12px;
+  object-fit: contain;
 }
