--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -202,6 +202,74 @@ input::-webkit-inner-spin-button {
   font-weight: 500;
   color: currentColor;
 }
+.market {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+}
+.market__head {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+}
+.market__coins {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  overflow-x: auto;
+}
+.market__coin {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 40px 28px;
+  align-items: center;
+  border-radius: 10px;
+  border: 2px solid var(--dark-blue);
+}
+.market__coin * {
+  font-weight: 500;
+  white-space: nowrap;
+}
+.market__coin-name {
+  font-size: 20px;
+}
+.market__coin-stat {
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  color: var(--error);
+}
+.market__coin-stat--top {
+  color: var(--success);
+}
+.market__coin-value {
+  font-size: 24px;
+  font-weight: 600;
+}
+.market__button {
+  background: var(--primary-9);
+  width: 240px;
+}
+.market__separator {
+  width: 100%;
+  background: var(--dark-blue);
+  height: 1px;
+}
+.market__tabs {
+  display: flex;
+  gap: 30px;
+}
+.market__tabs-item {
+  line-height: 32px;
+  color: var(--grey-6);
+  font-size: 20px;
+  font-weight: 500;
+}
+
 .footer {
   width: 100%;
   padding: 120px 0 40px 0;
@@ -226,11 +294,6 @@ input::-webkit-inner-spin-button {
   font-size: 20px;
   line-height: 32px;
   color: var(--grey-1);
-}
-.footer__line {
-  width: 100%;
-  height: 1px;
-  background: linear-gradient(0.25turn, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0) 100%);
 }
 .footer__links {
   display: flex;
@@ -309,17 +372,43 @@ input::-webkit-inner-spin-button {
   padding: 20px 20px;
 }
 
-.container, .header__content, .footer__container {
+.container, .header__content, .market, .footer__container {
   max-width: 1590px;
   width: 100%;
   margin: 0 auto;
 }
 
-.button, .header__logIn {
+.button, .header__logIn, .market__button {
   height: 56px;
   border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+
+.button--arrow::after, .market__button::after {
+  position: relative;
+  content: url("/assets/icons/ButtonArrow.svg");
+  top: 2px;
+}
+
+h2 {
+  font-size: 58px;
+  font-weight: bold;
+}
+
+.market__tabs-item--active {
+  pointer-events: none;
+  color: var(--grey-3);
+}
+
+.market__coins:not(.market__coins-show) {
+  display: none;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(0.25turn, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0) 100%);
 }
