--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,7 +1,8 @@
 @import "reset";
 @import "variables";
-@import "components/header.scss";
-@import "components/footer.scss";
+@import "components/header";
+@import "components/market";
+@import "components/footer";
 
 * {
   font-family: "Open Sans", sans-serif;
@@ -31,4 +32,37 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+
+.button--arrow {
+  &::after {
+    position: relative;
+    content: url("/assets/icons/ButtonArrow.svg");
+    top: 2px;
+  }
+}
+
+h2 {
+  font-size: 58px;
+  font-weight: bold;
+}
+.market__tabs-item--active {
+  pointer-events: none;
+  color: var(--grey-3);
+}
+
+.market__coins:not(.market__coins-show) {
+  display: none;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+
+  background: linear-gradient(
+    0.25turn,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
