--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,6 +4,7 @@
 @import "components/market";
 @import "components/footer";
 @import "components/banner";
+@import "components/questions";
 
 * {
   font-family: "Open Sans", sans-serif;
