--- a/assets/css/components/questions.scss
+++ b/assets/css/components/questions.scss
@@ -13,34 +13,51 @@
   &__subtitle {
     color: var(--grey-6);
   }
+  &__accordions {
+    display: flex;
+    gap: 30px;
+    align-items: flex-start;
+  }
   .accordion {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
     gap: 30px;
     z-index: 1;
+    width: 100%;
+    &-item {
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 4px;
+      position: relative;
+    }
     &-header {
       cursor: pointer;
-      padding: 15px 20px;
-      background-color: white;
-      border-radius: 12px;
+      padding: 20px;
       font-weight: 600;
-      font-size: 18px;
+      span {
+        font-size: 21px;
+        font-weight: 600;
+        padding-right: 24px;
+      }
+    }
+    &-button {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      transform: rotate(44deg);
+      transition: 0.3s ease-out;
     }
     &-content {
       max-height: 0;
       overflow: hidden;
       transition: min-height 0.3s ease-out, padding 0.3s ease-out;
-      background: black;
-      color: white;
-      border-radius: 0 0 12px 12px;
-      font-size: 18px;
+      color: var(--grey-6);
     }
     &-open {
-      .accordion-header {
-        border-radius: 12px 12px 0 0;
+      .accordion-button {
+        transform: unset;
       }
       .accordion-content {
-        padding: 15px 20px;
+        padding: 0 20px 20px 20px;
       }
     }
   }
