--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -17,8 +17,8 @@
   flex-direction: column;
   gap: 120px;
   background: var(--bg);
-  height: 100%;
   padding: 20px 20px;
+  min-height: 100dvh;
 }
 
 .container {
