--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -506,7 +506,7 @@ input::-webkit-inner-spin-button {
   margin: 0 auto;
 }
 
-.button, .header__logIn, .market__button {
+.button, .modal__form button, .header__logIn, .market__button {
   height: 56px;
   border-radius: 4px;
   display: flex;
@@ -539,4 +539,106 @@ hr {
   width: 100%;
   height: 1px;
   background: linear-gradient(0.25turn, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0) 100%);
+}
+
+.modal {
+  position: fixed;
+  height: 100dvh;
+  width: 100dvw;
+  left: 0px;
+  top: 0px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+  z-index: 999;
+}
+.modal__inner {
+  padding: 0 15px;
+  max-height: 90%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+@media (max-width: 375px) {
+  .modal__inner {
+    width: 100dvw;
+  }
+}
+.modal__content {
+  background: var(--bg);
+  border: 1px solid var(--grey-6);
+  border-radius: 6px;
+  min-width: 580px;
+  padding: 50px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+}
+.modal__actions {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  gap: 20px;
+}
+.modal__actions span {
+  font-size: 16px;
+  font-weight: 600;
+}
+.modal__register {
+  margin-top: 10px;
+  color: var(--grey-6);
+}
+.modal__register * {
+  font-size: 16px;
+}
+.modal__register span {
+  font-weight: 600;
+}
+.modal__form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  gap: 30px;
+}
+.modal__form button {
+  background: var(--primary-9);
+  margin-top: 10px;
+  width: 100%;
+}
+.modal__input {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  position: relative;
+}
+.modal__input label,
+.modal__input input {
+  font-size: 16px;
+}
+.modal__input label {
+  color: var(--grey-4);
+  padding-left: 14px;
+}
+.modal__input input {
+  padding: 14px;
+  border: 1px solid rgba(255, 255, 255, 0.16);
+  border-radius: 4px;
+}
+.modal__input input::placeholder {
+  color: var(--grey-6);
+}
+.modal__input-show {
+  position: absolute;
+  top: 44px;
+  right: 14px;
+  cursor: pointer;
+}
+.modal__title {
+  font-size: 36px;
+  font-weight: 600;
 }
