--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -68,3 +68,105 @@ hr {
     rgba(255, 255, 255, 0) 100%
   );
 }
+.modal {
+  position: fixed;
+  height: 100dvh;
+  width: 100dvw;
+  left: 0px;
+  top: 0px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(5px);
+  z-index: 999;
+  &__inner {
+    padding: 0 15px;
+
+    max-height: 90%;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    @media (max-width: $small) {
+      width: 100dvw;
+    }
+  }
+  &__content {
+    background: var(--bg);
+    border: 1px solid var(--grey-6);
+    border-radius: 6px;
+    min-width: 580px;
+    padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+  }
+  &__actions {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    gap: 20px;
+    span {
+      font-size: 16px;
+      font-weight: 600;
+    }
+  }
+  &__register {
+    margin-top: 10px;
+    color: var(--grey-6);
+    * {
+      font-size: 16px;
+    }
+    span {
+      font-weight: 600;
+    }
+  }
+  &__form {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    gap: 30px;
+    button {
+      @extend .button;
+      background: var(--primary-9);
+      margin-top: 10px;
+      width: 100%;
+    }
+  }
+  &__input {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+    position: relative;
+    label,
+    input {
+      font-size: 16px;
+    }
+    label {
+      color: var(--grey-4);
+      padding-left: 14px;
+    }
+    input {
+      padding: 14px;
+      border: 1px solid rgba(255, 255, 255, 0.16);
+      border-radius: 4px;
+      &::placeholder {
+        color: var(--grey-6);
+      }
+    }
+    &-show {
+      position: absolute;
+      top: 44px;
+      right: 14px;
+      cursor: pointer;
+    }
+  }
+  &__title {
+    font-size: 36px;
+    font-weight: 600;
+  }
+}
