--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -1,11 +1,39 @@
 .banner {
   max-width: 1590px;
   width: 100%;
-  margin: 0 auto;
-  padding: 165px 0 30px 0;
+  height: 100%;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   gap: 165px;
+}
+.banner::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("../../../assets/img/banner_bg-noise.png");
+  background-position: center;
+  background-size: cover;
+}
+.banner__content {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.banner__content-text {
+  max-width: 981px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.banner__content-buttons {
+  margin-top: 112px;
+  display: flex;
+  gap: 30px;
 }
 .banner__content-tag {
   display: flex;
@@ -25,11 +53,54 @@
   border-radius: 2px;
   background-color: var(--primary-9);
 }
+.banner__content-title {
+  font-size: 86px;
+  font-weight: 700;
+  line-height: 120.67px;
+  letter-spacing: -1.5px;
+}
+.banner__content-desc {
+  margin-top: 10px;
+  font-size: 20px;
+  line-height: 32px;
+  color: var(--grey-6);
+}
 .banner__content-line {
   margin: 0 216px 0 149px;
-  width: 30%;
+  width: 50%;
   height: 2px;
   background: linear-gradient(to right, transparent 50%, #141618 50%), linear-gradient(0.25turn, rgba(154, 195, 33, 0) 0%, rgba(154, 195, 33, 0.8) 50%, rgba(154, 195, 33, 0) 100%);
   background-size: 16px 2px, 100% 2px;
-  transform: translateX(220px);
+  transform: translateX(80px);
+}
+.banner__market {
+  display: flex;
+  align-items: center;
+}
+.banner__market-item {
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 32px;
+}
+.banner__market-heading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--grey-6);
+}
+.banner__market-heading > span {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--success);
 }
