--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -1,15 +1,50 @@
 .banner {
-  max-width: 1590px;
-  width: 100%;
-  margin: 0 auto;
+  @extend .container;
 
-  padding: 165px 0 30px 0;
+  height: 100%;
+
+  padding: 30px 0;
 
   display: flex;
   flex-direction: column;
   gap: 165px;
 
+  &::before {
+    content: "";
+
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-image: url("../../../assets/img/banner_bg-noise.png");
+    background-position: center;
+    background-size: cover;
+  }
+
   &__content {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    &-text {
+      max-width: 981px;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &-buttons {
+      margin-top: 112px;
+
+      display: flex;
+      gap: 30px;
+    }
+
     &-tag {
       display: flex;
       align-items: center;
@@ -36,9 +71,24 @@
       }
     }
 
+    &-title {
+      font-size: 86px;
+      font-weight: 700;
+      line-height: 120.67px;
+      letter-spacing: -1.5px;
+    }
+
+    &-desc {
+      margin-top: 10px;
+
+      font-size: 20px;
+      line-height: 32px;
+      color: var(--grey-6);
+    }
+
     &-line {
       margin: 0 216px 0 149px;
-      width: 30%;
+      width: 50%;
       height: 2px;
 
       background: linear-gradient(to right, transparent 50%, #141618 50%),
@@ -50,7 +100,46 @@
         );
       background-size: 16px 2px, 100% 2px;
 
-      transform: translateX(220px);
+      transform: translateX(80px);
+    }
+  }
+
+  &__market {
+    display: flex;
+    align-items: center;
+
+    &-item {
+      width: 100%;
+      padding: 10px 20px;
+
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      color: white;
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 32px;
+    }
+
+    &-heading {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      font-size: 16px;
+      line-height: 24px;
+      color: var(--grey-6);
+
+      & > span {
+        display: flex;
+        gap: 6px;
+        align-items: center;
+
+        font-size: 14px;
+        font-weight: 600;
+        color: var(--success);
+      }
     }
   }
 }
