--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -24,9 +24,7 @@
   }
 
   &__container {
-    max-width: 1590px;
-    width: 100%;
-    margin: 0 auto;
+    @extend .container;
 
     display: flex;
     flex-direction: column;
