--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -19,14 +19,10 @@
   background: var(--bg);
   padding: 20px 20px;
   min-height: 100dvh;
-  @media screen and (max-width: $small) {
-    padding: unset;
-  }
 }
 
 .container {
-  max-width: 1610px;
-  padding: 0 20px;
+  max-width: 1590px;
   width: 100%;
   margin: 0 auto;
 }
@@ -46,6 +42,13 @@
     content: url("/assets/icons/ButtonArrow.svg");
     top: 2px;
   }
+}
+
+.button--transparent {
+  @extend .button;
+  background: transparent;
+  width: 240px;
+  border: 1px solid white;
 }
 
 h2 {
@@ -72,6 +75,7 @@ hr {
     rgba(255, 255, 255, 0) 100%
   );
 }
+
 .modal {
   position: fixed;
   height: 100dvh;
@@ -184,4 +188,18 @@ hr {
     font-size: 36px;
     font-weight: 600;
   }
+}
+
+.vertical {
+  all: unset;
+
+  display: block;
+
+  margin: 0 20px;
+
+  height: 40px;
+  width: 1px;
+
+  background: white;
+  opacity: 0.2;
 }
