--- a/assets/css/components/market.scss
+++ b/assets/css/components/market.scss
@@ -4,27 +4,41 @@
   flex-direction: column;
   align-items: center;
   gap: 60px;
+  @media screen and (max-width: $medium) {
+    gap: 40px;
+  }
 
   &__head {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
+    @media screen and (max-width: $medium) {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
   }
   &__coins {
     display: flex;
     justify-content: space-between;
-    gap: 30px;
+    gap: 13px;
+    width: 100%;
     overflow-x: auto;
   }
   &__coin {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 40px 28px;
+    padding: 40px 0;
+    min-width: 240px;
     align-items: center;
     border-radius: 10px;
     border: 2px solid var(--dark-blue);
+    @media screen and (max-width: $medium) {
+      padding: 20px 0;
+      background: var(--dark-blue);
+    }
     * {
       font-weight: 500;
       white-space: nowrap;
@@ -52,6 +66,9 @@
     @extend .button--arrow;
     background: var(--primary-9);
     width: 240px;
+    @media screen and (max-width: $small) {
+      width: 100%;
+    }
   }
   &__separator {
     width: 100%;
@@ -61,11 +78,18 @@
   &__tabs {
     display: flex;
     gap: 30px;
+    overflow-x: auto;
+    width: 100%;
+    justify-content: flex-end;
+    @media screen and (max-width: $medium) {
+      justify-content: center;
+    }
     &-item {
       line-height: 32px;
       color: var(--grey-6);
       font-size: 20px;
       font-weight: 500;
+      white-space: nowrap;
     }
   }
 }
