--- a/assets/css/components/market.scss
+++ b/assets/css/components/market.scss
@@ -13,6 +13,9 @@
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
+    h2 {
+      white-space: nowrap;
+    }
     @media screen and (max-width: $medium) {
       flex-direction: column;
       align-items: center;
