--- a/assets/css/components/questions.scss
+++ b/assets/css/components/questions.scss
@@ -1,9 +1,24 @@
 .questions {
   @extend .container;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 60px;
+  &::before {
+    content: "";
+
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-image: url("../../../assets/img/questions-bg-noise.png");
+    background-position: center;
+    background-size: cover;
+  }
   @media screen and (max-width: $medium) {
     gap: 40px;
   }
