--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -588,10 +588,22 @@ input::-webkit-inner-spin-button {
 }
 
 .questions {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 60px;
+}
+.questions::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("../../../assets/img/questions-bg-noise.png");
+  background-position: center;
+  background-size: cover;
 }
 @media screen and (max-width: 768px) {
   .questions {
@@ -684,34 +696,126 @@ input::-webkit-inner-spin-button {
   padding: 0 20px 20px 20px;
 }
 
+.reviews {
+  overflow: hidden;
+  position: relative;
+  display: block;
+  width: 100%;
+  background: var(--dark-blue);
+}
+.reviews::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("../../../assets/img/bg-noise.png");
+  background-position: center;
+  background-size: cover;
+}
+.reviews__container {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  padding: 90px 0;
+}
+.reviews__text {
+  display: flex;
+  align-items: center;
+  gap: 120px;
+}
+.reviews__text-title {
+  font-size: 58px;
+  font-weight: 700;
+  line-height: 72px;
+  color: var(--white);
+}
+.reviews__text-desc {
+  font-size: 18px;
+  line-height: 28px;
+  color: var(--grey-6);
+}
+.reviews__card {
+  padding: 40px 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background: #272a34;
+  border-radius: 10px;
+}
+.reviews__card-user {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.reviews__card-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.reviews__card-name {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 32px;
+}
+.reviews__card-location {
+  font-size: 14px;
+  line-height: 20px;
+}
+.reviews__card-desc {
+  font-size: 24px;
+  line-height: 36px;
+}
+.reviews__slider {
+  position: relative;
+}
+.reviews__slider-pagination {
+  bottom: -50px !important;
+}
+.reviews__slider-pagination > .swiper-pagination-bullet {
+  width: 40px;
+  height: 4px;
+  background: white;
+  opacity: 0.2;
+  border-radius: 0;
+}
+.reviews__slider-pagination > .swiper-pagination-bullet-active {
+  width: 40px;
+  height: 4px;
+  background: var(--grey-4);
+  opacity: 1;
+  border-radius: 0;
+}
+
 * {
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
   color: white;
 }
 
-.wrapper {
+.page-container {
   display: flex;
   flex-direction: column;
   gap: 120px;
   background: var(--bg);
-  padding: 20px 20px;
-  min-height: 100dvh;
 }
-@media screen and (max-width: 375px) {
-  .wrapper {
-    padding: unset;
+@media (max-width: 1024px) {
+  .page-container {
+    padding: 20px 20px;
   }
 }
 
-.container, .header__content, .market, .footer__container, .banner, .questions {
+.container, .header__content, .market, .footer__container, .banner, .questions, .reviews__container {
   max-width: 1610px;
   padding: 0 20px;
   width: 100%;
   margin: 0 auto;
 }
 @media screen and (max-width: 375px) {
-  .container, .header__content, .market, .footer__container, .banner, .questions {
+  .container, .header__content, .market, .footer__container, .banner, .questions, .reviews__container {
     padding: 0 16px;
   }
 }
