--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -8,6 +8,10 @@
 
   background: var(--dark-blue);
 
+  @media (max-width: $medium) {
+    padding: 40px 0;
+  }
+
   &::before {
     content: "";
 
@@ -37,6 +41,13 @@
     display: flex;
     justify-content: space-between;
 
+    @media (max-width: $medium) {
+      justify-content: unset;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+    }
+
     & > img {
       width: 192px;
       height: 19px;
@@ -47,6 +58,11 @@
     display: flex;
     align-items: center;
     gap: 30px;
+
+    @media (max-width: $medium) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
 
     & > span {
       font-size: 20px;
@@ -59,6 +75,11 @@
   &__links {
     display: flex;
     gap: 30px;
+
+    @media (max-width: $medium) {
+      flex-wrap: wrap;
+      text-align: center;
+    }
 
     &-item {
       width: 100%;
@@ -100,10 +121,21 @@
     display: flex;
     justify-content: space-between;
 
+    @media (max-width: $medium) {
+      justify-content: unset;
+      flex-direction: column;
+      gap: 20px;
+    }
+
     &-copyright {
       display: flex;
       align-items: center;
       gap: 20px;
+
+      @media (max-width: $medium) {
+        flex-wrap: wrap;
+        text-align: center;
+      }
 
       & > span {
         font-size: 16px;
@@ -128,6 +160,10 @@
     &-langs {
       display: flex;
       gap: 30px;
+
+      @media (max-width: $medium) {
+        flex-direction: column;
+      }
     }
 
     &-input {
@@ -139,6 +175,12 @@
 
       border: 1px solid #ffffff25;
       border-radius: 4px;
+
+      @media (max-width: $medium) {
+        width: 100%;
+
+        justify-content: space-between;
+      }
 
       & > span {
         font-size: 16px;
